# MyRTR

./: .gitignore  CMakeLists.txt  README.md
data/shaders/: deferred_lighting.fs  deferredlight.fs  env.fs  env.vs  gbuffer.fs  img.fs  p2t2.vs  p3t2n3t3.vs  postprocess.fs  stdBRDF.fs
include/MyRTR/: DeferredRenderer.h
src/core/: CMakeLists.txt  DeferredRenderer.cpp
src/core/Impl/: DeferredRendererImpl.cpp  DeferredRendererImpl.h
src/test/00_basic/: CMakeLists.txt  main.cpp
src/test/00_basic/01_fb/: CMakeLists.txt  main.cpp
src/test/00_basic/02_cm/: main.cpp
src/test/00_basic/camera/: CMakeLists.txt  camera.cpp  camera.h
src/test/01_defer/: main.cpp
