CMAKE_MINIMUM_REQUIRED(VERSION 3.14 FATAL_ERROR)

PROJECT(MyRTR VERSION 0.0.10 LANGUAGES CXX)
MESSAGE(STATUS "Project: ${PROJECT_NAME} ${PROJECT_VERSION}")

INCLUDE(FETCHCONTENT)

MESSAGE(STATUS "Looking for: MyCMake 0.5.0")
FIND_PACKAGE(MyCMake 0.5.0 QUIET)
IF (NOT MyCMake_FOUND)
    SET(ADDRESS "https://github.com/shimakaze09/MyCMake.git")
    MESSAGE(STATUS "MyCMake 0.5.0 not found\n")
    MESSAGE(STATUS "Fetching from ${ADDRESS} with tag 0.5.0")
    FETCHCONTENT_DECLARE(
            MyCMake
            GIT_REPOSITORY ${ADDRESS}
            GIT_TAG "0.5.0"
    )
    FETCHCONTENT_MAKEAVAILABLE(MyCMake)
    MESSAGE(STATUS "MyCMake 0.5.0 built")
ENDIF ()

IF (BUILDMyRTRTEST)
    FIND_PACKAGE(glfw3 REQUIRED)
ENDIF ()

ADD_DEP(MyGL 0.2.4)
ADD_DEP(MyScene 0.5.5)

ADD_SUB_DIRS_REC(src)

EXPORT_TARGETS(DIRECTORIES "include")